force-app/main/default/objects/Event__c/Event__c.object-meta.xml
<CustomObject>
    <description>Custom object that mirrors the LCRM object setup; used to track all types of events and trips for Development and Programs</description>
    <label>Event</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>