force-app/main/default/objects/Event__c/fields/Constituency__c.field-meta.xml
<CustomField>
    <fullName>Constituency__c</fullName>
    <description>Heller Data Migration 2021</description>
    <label>Constituency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Constituency</valueSetName>
    </valueSet>
</CustomField>