force-app/main/default/objects/Event__c/fields/Event_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Date_Time__c</fullName>
    <description>Heller Data Migration 2021</description>
    <label>Event Date Time</label>
    <type>DateTime</type>
</CustomField>