force-app/main/default/objects/Event__c/fields/Solicitor_3__c.field-meta.xml
<CustomField>
    <fullName>Solicitor_3__c</fullName>
    <description>Heller Data Migration 2021</description>
    <label>Solicitor 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Solicitors</valueSetName>
    </valueSet>
</CustomField>