force-app/main/default/objects/Event__c/fields/Venue_Information__c.field-meta.xml
<CustomField>
    <fullName>Venue_Information__c</fullName>
    <description>Heller Data Migration 2021</description>
    <label>Venue Information</label>
    <length>255</length>
    <type>Text</type>
</CustomField>