force-app/main/default/objects/Event__c/fields/Volunteer_2__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller Data Migration 2021</description>
    <label>Volunteer 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Volunteer 2)</relationshipLabel>
    <relationshipName>Events3</relationshipName>
    <type>Lookup</type>
</CustomField>