force-app/main/default/objects/Event__c/fields/Volunteer_3__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Heller Data Migration 2021</description>
    <label>Volunteer 3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Events (Volunteer 3)</relationshipLabel>
    <relationshipName>Events5</relationshipName>
    <type>Lookup</type>
</CustomField>