force-app/main/default/objects/Event__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Primary_User__c</columns>
    <columns>Constituency__c</columns>
    <columns>Sub_Constituency__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Constituency__c</field>
        <operation>notEqual</operation>
        <value>Development,EDFBIZ</value>
    </filters>
    <label>All</label>
</ListView>