force-app/main/default/objects/Event__c/listViews/Climate_Corps_Events.listView-meta.xml
<ListView>
    <fullName>Climate_Corps_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Primary_User__c</columns>
    <columns>Constituency__c</columns>
    <columns>Sub_Constituency__c</columns>
    <columns>Entity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Constituency__c</field>
        <operation>contains</operation>
        <value>EDFBIZ</value>
    </filters>
    <filters>
        <field>Sub_Constituency__c</field>
        <operation>equals</operation>
        <value>EDFBIZ - Climate Corps</value>
    </filters>
    <label>Climate Corps Events</label>
    <sharedTo>
        <group>Climate_Corps</group>
    </sharedTo>
</ListView>