force-app/main/default/objects/Event__c/listViews/Development_Events.listView-meta.xml
<ListView>
    <fullName>Development_Events</fullName>
    <columns>NAME</columns>
    <columns>Event_Date_Time__c</columns>
    <columns>Event_Type__c</columns>
    <columns>Primary_User__c</columns>
    <columns>Constituency__c</columns>
    <columns>Sub_Constituency__c</columns>
    <columns>Entity__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>Development Events</label>
    <sharedTo>
        <group>Development</group>
        <group>Membership</group>
    </sharedTo>
</ListView>